# entdb

./: .gitignore  Cargo.toml  Makefile  README.md
crates/entdb/: Cargo.toml  README.md
crates/entdb-server/: Cargo.toml  README.md
crates/entdb-server/src/: lib.rs  main.rs
crates/entdb-server/src/cli/: mod.rs
crates/entdb-server/src/server/: auth.rs  handler.rs  metrics.rs  mod.rs  type_map.rs
crates/entdb-server/tests/: pgwire_ingress_hardening.rs  pgwire_integration.rs
crates/entdb/benches/: comparative_bench.rs  core_bench.rs  workload_bench.rs
crates/entdb/examples/: embedded_connect.rs
crates/entdb/proptest-regressions/query/tests/: property_tests.txt
crates/entdb/src/: error.rs  fault.rs  lib.rs  tx.rs
crates/entdb/src/catalog/: index_catalog.rs  mod.rs  schema.rs  table_catalog.rs
crates/entdb/src/catalog/tests/: catalog_tests.rs  mod.rs
crates/entdb/src/query/: binder.rs  cardinality.rs  cost.rs  expression.rs  history.rs  mod.rs  optimizer.rs  plan.rs  planner.rs  polyglot.rs  prepared_fast.rs
crates/entdb/src/query/executor/: alter_table.rs  analyze.rs  bm25_maintenance.rs  bm25_scan.rs  btree_maintenance.rs  count.rs  create_index.rs  create_table.rs  delete.rs  delete_advanced.rs  drop_index.rs  drop_table.rs  filter.rs  group_aggregate.rs  group_count.rs  index_lookup.rs  insert.rs  insert_from_select.rs  limit.rs  mod.rs  nested_loop_join.rs  project.rs  project_expr.rs  seq_scan.rs  sort.rs  truncate.rs  union.rs  update.rs  update_advanced.rs  upsert.rs  values.rs
crates/entdb/src/query/tests/: durability_tests.rs  engine_tests.rs  hardening_tests.rs  mod.rs  mvcc_tests.rs  optimizer_controls_tests.rs  optimizer_cost_tests.rs  optimizer_estimator_tests.rs  optimizer_hbo_tests.rs  optimizer_history_tests.rs  optimizer_introspection_tests.rs  optimizer_tests.rs  polyglot_tests.rs  property_tests.rs  vector_tests.rs
crates/entdb/src/storage/: bm25.rs  buffer_pool.rs  disk_manager.rs  mod.rs  page.rs  replacer.rs  slotted_page.rs  table.rs  tuple.rs
crates/entdb/src/storage/btree/: iterator.rs  mod.rs  node.rs  tree.rs
crates/entdb/src/types/: mod.rs  value.rs
crates/entdb/src/wal/: log_manager.rs  log_record.rs  mod.rs  recovery.rs
crates/entdb/tests/: bm25_reliability_tests.rs  bm25_sidecar_tests.rs  bm25_tests.rs  btree_crash_matrix_broad.rs  btree_crashpoint_tests.rs  connect_api_tests.rs  crash_matrix.rs  crash_matrix_extended.rs  docs_examples.rs  fault_injection.rs  mvcc_recovery_matrix.rs  mvcc_stress_query.rs  perf_regression.rs  recovery_failpoint_matrix.rs  recovery_failpoint_scale.rs  stress_storage.rs  stress_wal.rs  vector_tests.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: catalog_load.rs  polyglot_transpile.rs  query_parse_bind.rs  tuple_roundtrip.rs  wal_decode.rs
(+64 files in other folders)
