[package]
name = "entdb-server"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL wire-compatible server for EntDB."
license = "Apache-2.0"
repository = "https://github.com/nssalian/entdb"
readme = "README.md"
keywords = ["database", "sql", "postgres", "pgwire"]
categories = ["database-implementations", "network-programming"]

[[bin]]
name = "entdb"
path = "src/main.rs"

[dependencies]
entdb = { version = "0.1.0", path = "../entdb" }
clap = { version = "4.5", features = ["derive"] }
pgwire = { version = "0.28", features = ["scram"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
sqlparser = { version = "0.55", features = ["visitor"] }
rand = "0.8"
tokio-rustls = "0.26"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
rcgen = "0.13"
proptest = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
